--- a/assets/styles/scss/layout/_main.scss
+++ b/assets/styles/scss/layout/_main.scss
@@ -1,6 +1,6 @@
 body {
 	font: normal 18px/1.6em sans-serif;
-	background: #aaa;
+	color: #333;
 }
 
 .wrapper {
@@ -26,4 +26,24 @@ body {
 			}
 		}
 	}
+}
+
+header.header-main {
+	padding: 25px 0;
+	margin: 0 0 15px 0;
+	a {
+		text-decoration: none;
+	}
+	.logo {
+		font-size: 1.2em;
+		font-weight: bold;
+		color: #333;
+	}
+}
+
+footer.footer-main {
+	padding: 15px 0;
+	margin: 15px 0 0 0;
+	font-size: 0.9em;
+	color: #aaa;
 }
