--- a/assets/styles/scss/init.scss
+++ b/assets/styles/scss/init.scss
@@ -16,5 +16,6 @@ $susy: (
 //global things
 @import 'general/_reset';
 @import 'layout/_navigation';
+@import 'layout/_content';
 @import 'layout/_main';
 //pages
