--- a/assets/styles/scss/layout/_main.scss
+++ b/assets/styles/scss/layout/_main.scss
@@ -87,9 +87,14 @@ a {
 	}
 }
 
+.r-img {
+	width: 100%;
+	max-width: 100%;
+	height: auto;	
+}
+
 header.header-main {
 	padding: 25px 0;
-	margin: 0 0 50px 0;
 	a {
 		text-decoration: none;
 	}
