--- a/assets/styles/scss/layout/_content.scss
+++ b/assets/styles/scss/layout/_content.scss
@@ -2,3 +2,35 @@
 .attachment-post-thumbnail.wp-post-image {
 	@extend .r-img;
 }
+
+.owl-carousel {
+	.slide {
+		position: relative;
+		a {
+			text-decoration: none;
+			color: #fff;
+			&:hover {
+				text-decoration: none;
+				color: #fff;
+			}
+		}
+		.text-box {
+			background: rgba(0,0,0,0.5);
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			padding: 15px;
+			width: 100%;
+			h3 {
+				font-size: 1.25em;
+				font-weight: bold;
+			}
+			p {
+				display: none;
+				@include breakpoint(tablet){
+					display: block;
+				}
+			}
+		}
+	}
+}
