--- a/assets/styles/scss/layout/_main.scss
+++ b/assets/styles/scss/layout/_main.scss
@@ -10,19 +10,19 @@ body {
 	overflow-y: scroll;
 	overflow-x: hidden;
 	margin: 0;
-	font: 500 normal 16px/1.6em sans-serif;
+	font: 500 normal 14px/1.6em sans-serif;
 	color: #333;
 	@include breakpoint(tablet) {
-		font-size: 17px;
+		font-size: 15px;
 	}
 	@include breakpoint(desktop) {
-		font-size: 18px;
+		font-size: 16px;
 	}
 	@include breakpoint(large) {
-		font-size: 19px;
+		font-size: 17px;
 	}
 	@include breakpoint(larger) {
-		font-size: 20px;
+		font-size: 18px;
 	}
 }
 
@@ -56,8 +56,15 @@ a {
 	}
 }
 
+p {
+	color: #737C7F;
+	strong {
+		color: #333;
+	}
+}
+
 .page-wrapper {
-	max-width: 1140px;
+	max-width: 100%;
 	overflow: hidden;
 	margin: 0 auto;
 	position: relative;
@@ -94,31 +101,42 @@ a {
 }
 
 header.header-main {
-	padding: 25px 0;
+	@include clearfix;
 	a {
 		text-decoration: none;
 	}
 	.logo {
-		font-size: 1.2em;
+		font-size: 1.5em;
 		font-weight: bold;
-		color: #333;
-	}
-	nav.nav-main {
+		color: #bbb;
+		&:hover {
+			color: #aaa;
+		}
 		@include breakpoint(laptop) {
-			width: 80%;
 			float: left;
+			line-height: 100px;
+		}
+	}
+	.menu-wrapper {
+		@include breakpoint(laptop) {
+			float: right;
 		}
 	}
 	form.form-search {
-		@include breakpoint(laptop) {
-			width: 20%;
-			float: right;
-		}
+		display: none;
 		input {
-			width: 100%;
 			padding: 8px 10px;
 			font-size: inherit;
 		}
+	}
+}
+
+.emotion {
+	.wrapper {
+		display: block;
+	}
+	.img-wrapper {
+		max-height: 600px;
 	}
 }
 
