--- a/assets/styles/scss/init.scss
+++ b/assets/styles/scss/init.scss
@@ -18,6 +18,7 @@ $susy: (
 //@import 'general/_reset';
 
 @import 'plugins/_owl-carousel';
+@import 'plugins/_flaticon';
 
 @import 'layout/_navigation';
 @import 'layout/_main';
