--- a/assets/styles/scss/layout/_content.scss
+++ b/assets/styles/scss/layout/_content.scss
@@ -20,6 +20,19 @@
 				}
 			}
 		}
+		.blank {
+			display: none;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background: rgba(0, 0, 0, 0.5);
+			top: 0;
+			left: 0;
+			z-index: 1;
+			@include breakpoint(tablet){
+				display: block;
+			}
+		}
 		.img-wrapper {
 			display: block;
 			overflow: hidden;
@@ -27,24 +40,33 @@
 		.text-box {
 			width: 100%;
 			position: relative;
+			z-index: 2;
 			display: block;
+			text-shadow: 0px 0px 3px rgba(0,0,0,0.25);
 			@include breakpoint(tablet){
-				background: rgba(0,0,0,0.5);
 				position: absolute;
-				bottom: 0;
+				bottom: 20%;
 				left: 0;
 				padding: 15px 0;
 				width: 100%;
 			}
 			h3 {
-				font-size: 1.25em;
+				font-size: 1.5em;
+				line-height: 1.1em;
 				font-weight: bold;
 				margin: 0 0 5px;
+				max-width: 700px;
+				@include breakpoint(tablet){
+					font-size: 2em;
+				}
 			}
 			p {
+				font-size: 1.5em;
+				line-height: 1.4em;
 				display: none;
 				margin: 0;
 				color: #fff;
+				max-width: 700px;
 				@include breakpoint(tablet){
 					display: block;
 				}
