--- a/assets/styles/scss/plugins/_flaticon.scss
+++ b/assets/styles/scss/plugins/_flaticon.scss
@@ -11,10 +11,8 @@
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
 [class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
 	font-family: Flaticon;
-        font-size: 20px;
-font-style: normal;
-margin-left: 20px;
-}.flaticon-apple19:before {
+}
+.flaticon-apple19:before {
 	content: "\e000";
 }
 .flaticon-arrow487:before {
@@ -23,120 +21,126 @@ margin-left: 20px;
 .flaticon-calentar:before {
 	content: "\e002";
 }
-.flaticon-cloud-storage:before {
+.flaticon-close47:before {
 	content: "\e003";
 }
-.flaticon-cloud127:before {
+.flaticon-cloud-storage:before {
 	content: "\e004";
 }
-.flaticon-computer11:before {
+.flaticon-cloud127:before {
 	content: "\e005";
 }
-.flaticon-computermouse26:before {
+.flaticon-computer11:before {
 	content: "\e006";
 }
-.flaticon-computing7:before {
+.flaticon-computermouse26:before {
 	content: "\e007";
 }
-.flaticon-desktop14:before {
+.flaticon-computing7:before {
 	content: "\e008";
 }
-.flaticon-download164:before {
+.flaticon-cross93:before {
 	content: "\e009";
 }
-.flaticon-edit45:before {
+.flaticon-desktop14:before {
 	content: "\e00a";
 }
-.flaticon-email5:before {
+.flaticon-download164:before {
 	content: "\e00b";
 }
-.flaticon-facebook55:before {
+.flaticon-edit45:before {
 	content: "\e00c";
 }
-.flaticon-gear39:before {
+.flaticon-email5:before {
 	content: "\e00d";
 }
-.flaticon-google116:before {
+.flaticon-facebook55:before {
 	content: "\e00e";
 }
-.flaticon-halffilled1:before {
+.flaticon-gear39:before {
 	content: "\e00f";
 }
-.flaticon-instagram12:before {
+.flaticon-google116:before {
 	content: "\e010";
 }
-.flaticon-keyboard53:before {
+.flaticon-halffilled1:before {
 	content: "\e011";
 }
-.flaticon-keyboard54:before {
+.flaticon-instagram12:before {
 	content: "\e012";
 }
-.flaticon-last-track:before {
+.flaticon-keyboard53:before {
 	content: "\e013";
 }
-.flaticon-layer12:before {
+.flaticon-keyboard54:before {
 	content: "\e014";
 }
-.flaticon-levels1:before {
+.flaticon-last-track:before {
 	content: "\e015";
 }
-.flaticon-linkedin11:before {
+.flaticon-layer12:before {
 	content: "\e016";
 }
-.flaticon-magnifying-glass32:before {
+.flaticon-levels1:before {
 	content: "\e017";
 }
-.flaticon-male80:before {
+.flaticon-linkedin11:before {
 	content: "\e018";
 }
-.flaticon-mark1:before {
+.flaticon-magnifying-glass32:before {
 	content: "\e019";
 }
-.flaticon-maximize1:before {
+.flaticon-male80:before {
 	content: "\e01a";
 }
-.flaticon-menu55:before {
+.flaticon-mark1:before {
 	content: "\e01b";
 }
-.flaticon-notification5:before {
+.flaticon-maximize1:before {
 	content: "\e01c";
 }
-.flaticon-pin56:before {
+.flaticon-menu55:before {
 	content: "\e01d";
 }
-.flaticon-pinterest34:before {
+.flaticon-notification5:before {
 	content: "\e01e";
 }
-.flaticon-screen54:before {
+.flaticon-pin56:before {
 	content: "\e01f";
 }
-.flaticon-shopping69:before {
+.flaticon-pinterest34:before {
 	content: "\e020";
 }
-.flaticon-smartphone86:before {
+.flaticon-screen54:before {
 	content: "\e021";
 }
-.flaticon-social24:before {
+.flaticon-shopping69:before {
 	content: "\e022";
 }
-.flaticon-speechbubble65:before {
+.flaticon-smartphone86:before {
 	content: "\e023";
 }
-.flaticon-square234:before {
+.flaticon-social24:before {
 	content: "\e024";
 }
-.flaticon-star178:before {
+.flaticon-speechbubble65:before {
 	content: "\e025";
 }
-.flaticon-system1:before {
+.flaticon-square234:before {
 	content: "\e026";
 }
-.flaticon-tablet-screen:before {
+.flaticon-star178:before {
 	content: "\e027";
 }
-.flaticon-twitter1:before {
+.flaticon-system1:before {
 	content: "\e028";
 }
-.flaticon-youtube18:before {
+.flaticon-tablet-screen:before {
 	content: "\e029";
+}
+.flaticon-twitter1:before {
+	content: "\e02a";
+}
+.flaticon-youtube18:before {
+	content: "\e02b";
 }
