--- a/assets/styles/scss/layout/_navigation.scss
+++ b/assets/styles/scss/layout/_navigation.scss
@@ -2,8 +2,17 @@ nav.nav-main {
 	position: relative;
 	z-index: 5;
 	display: none;
+	@include breakpoint(mobileonly){
+		position: absolute;
+		top: 62px;
+		left: 0;
+		background: #fff;
+		width: 100%;
+		border-bottom: 1px solid #eee;
+		padding: 10px 0;
+	}
 	@include breakpoint(laptop){
-		display: block;
+		display: block !important;
 	}
 	ul {
 		@include clearfix;
@@ -16,7 +25,7 @@ nav.nav-main {
 			}
 			a {
 				display: block;
-				padding: 5px;
+				padding: 5px 15px;
 				color: #888;
 				&:hover {
 					color: #333;
@@ -34,6 +43,12 @@ nav.nav-main {
 				}
 				@include breakpoint(laptop){
 					line-height: 100px;
+				}
+			}
+			@include breakpoint(mobileonly){
+				ul {
+					display: block;
+					padding-left: 15px;
 				}
 			}
 			@include breakpoint(laptop){
