--- a/assets/styles/scss/layout/_main.scss
+++ b/assets/styles/scss/layout/_main.scss
@@ -255,6 +255,7 @@ footer.footer-main {
 			textarea,
 			button {
 				font-size: inherit;
+				line-height: inherit;
 				width: 100%;
 				padding: 10px;
 				margin: 0 0 10px;
