--- a/assets/styles/scss/init.scss
+++ b/assets/styles/scss/init.scss
@@ -23,5 +23,6 @@ $susy: (
 @import 'layout/_navigation';
 @import 'layout/_main';
 @import 'layout/_content';
+@import 'layout/_404';
 @import 'layout/_article';
 //pages
