--- a/assets/styles/scss/layout/_main.scss
+++ b/assets/styles/scss/layout/_main.scss
@@ -190,6 +190,7 @@ header.header-main {
 		top: 61px;
 		left: 0;
 		background: #fff;
+		border-top: 1px solid #eee;
 		height: 61px;
 		z-index: 6;
 		width: 100%;
