--- a/assets/styles/scss/layout/_article.scss
+++ b/assets/styles/scss/layout/_article.scss
@@ -19,7 +19,7 @@ article {
 			float: left;
 		}
 		a {
-			color: #333;
+			color: inherit;
 		}
 		h3 {
 			line-height: 1.2em;
@@ -27,7 +27,6 @@ article {
 		}
 		p {
 			margin: 0;
-			color: #666;
 		}
 	}
 	.infos {
