--- a/assets/styles/scss/layout/_article.scss
+++ b/assets/styles/scss/layout/_article.scss
@@ -1,5 +1,8 @@
 article {
 	@include clearfix;
+	strong {
+		font-size: 1.2em;
+	}
 	.block-side {
 		@include breakpoint(tablet){
 			width: 40%;
@@ -23,7 +26,7 @@ article {
 		}
 		h3 {
 			line-height: 1.2em;
-			margin: 0 0 8px;
+			margin: 0;
 		}
 		p {
 			margin: 0;
@@ -31,7 +34,7 @@ article {
 	}
 	.infos {
 		@include clearfix;
-		margin: 3px 0 0;
+		margin: 3px 0;
 		padding: 0;
 		font-size: 0.9em;
 		li {
