--- a/assets/styles/scss/layout/_plugins.scss
+++ b/assets/styles/scss/layout/_plugins.scss
@@ -1,5 +1,9 @@
+div.wpcf7-response-output,
 div.wpcf7-validation-errors {
-	margin: 0 !important;
+  margin: 0 !important;
+}
+
+div.wpcf7-validation-errors {
 	padding: 10px;
 	color: #c4690e;
 	background: #fffdf3;
@@ -14,6 +18,7 @@ div.wpcf7-validation-errors {
 	border: 1px solid red !important;
 }
 
-.wpcf7-not-valid-tip {
+.wpcf7-not-valid-tip,
+div.wpcf7-mail-sent-ok {
 	display: none !important;
 }
