--- a/assets/styles/scss/init.scss
+++ b/assets/styles/scss/init.scss
@@ -24,6 +24,7 @@ $susy: (
 @import 'layout/_main';
 @import 'layout/_content';
 @import 'layout/_404';
+@import 'layout/_search';
 @import 'layout/_article';
 @import 'layout/_comments';
 @import 'layout/_plugins';
